examples/auth/private-inbox-jwt/cli/output.txt
Network 0a88f9fe_default  Creating
Network 0a88f9fe_default  Created
Container 0a88f9fe-nats-1  Creating
Container 0a88f9fe-nats-1  Created
Container 0a88f9fe-nats-1  Starting
Container 0a88f9fe-nats-1  Started
[ OK ] generated and stored operator key "OAHYXVFNEAM7WTFZSKJBYO6O43VAYZTLAWCA2DRYAMNKNTOHTXQMV37W"
[ OK ] added operator "local"
[ OK ] When running your own nats-server, make sure they run at least version 2.2.0
[ OK ] created operator signing key: OBQQR4YUVHDBKBES4H6PZPOTF5FB5OUDWPZE25YPETXYYGYNJKXKEGDE
[ OK ] created system_account: name:SYS id:ADWIES4RKOM7NP37UPHGYYTG646JL7G4TKXLHMDIJ7BLPDDX3OM7QVKC
[ OK ] created system account user: name:sys id:UCL2XB5QD4CC6RZTWDASKPTX23XJG4GKBH7P6QI3NK44GHN5L2MPWU6L
[ OK ] system account user creds file stored in `/nsc/nkeys/creds/local/SYS/sys.creds`
[ OK ] strict signing key usage set to: true
[ OK ] set account jwt server url to "nats://nats:4222"
[ OK ] edited operator "local"
[ OK ] generated and stored account key "ABYMEBRXQ6SANHSAXDYUYYQHPJNAMXWI7RAWLHDQ4QGEZ4UVIQDF6437"
[ OK ] added account "APP"
[ OK ] added signing key "ABEGDLYO4ORM6AFYDMVQFBV3RM2MHKX5L5DHY75ILHH5XER4O3CQ55CW"
[ OK ] edited account "APP"
[ERR ] push to nats-server "nats://nats:4222" using system account "SYS":
       [ERR ] push APP to nats-server with nats account resolver:
              [ERR ] failed to get response to push account: nats: no responders available for request
              [ OK ] pushed to a total of 0 nats-server
Error: all jobs failed
[ OK ] set max responses to 1
[ OK ] added sub "services.greet"
[ OK ] generated and stored user key "UDB7P5VS47BV36WZMO6A5B2C34K4PFLVFB43DX5NEOOS7R56CKWDU6F5"
[ OK ] generated user creds file `/nsc/nkeys/creds/local/APP/greeter.creds`
[ OK ] added user "greeter" to account "APP"
[ OK ] added pub "joe.>"
[ OK ] added pub "services.*"
[ OK ] generated and stored user key "UBKO46HIGHYIWF3ES2EQAAOPYXJPYCRKJNDHEZUYPLKIF62AIYW4CSIF"
[ OK ] generated user creds file `/nsc/nkeys/creds/local/APP/joe.creds`
[ OK ] added user "joe" to account "APP"
[ OK ] added pub "pam.>"
[ OK ] added pub "services.*"
[ OK ] generated and stored user key "UAQUSO7LQFC5PJHWZ6CEL2AMHNVYYOCBY7DPUTK3ZKLVTWSWLKDRRB4F"
[ OK ] generated user creds file `/nsc/nkeys/creds/local/APP/pam.creds`
[ OK ] added user "pam" to account "APP"
[ OK ] added sub "_INBOX.>"
[ OK ] generated user creds file `/nsc/nkeys/creds/local/APP/joe.creds`
[ OK ] edited user "joe"
[ OK ] added sub "_INBOX.>"
[ OK ] generated user creds file `/nsc/nkeys/creds/local/APP/pam.creds`
[ OK ] edited user "pam"
NATS Configuration Context "greeter"

      Server URLs: nats://nats:4222
      Credentials: /nsc/nkeys/creds/local/APP/greeter.creds (OK)
       NSC Lookup: nsc://local/APP/greeter
             Path: /nsc/.config/nats/context/greeter.json

WARNING: Shell environment overrides in place using NATS_URL
NATS Configuration Context "joe"

      Server URLs: nats://nats:4222
      Credentials: /nsc/nkeys/creds/local/APP/joe.creds (OK)
       NSC Lookup: nsc://local/APP/joe
             Path: /nsc/.config/nats/context/joe.json

WARNING: Shell environment overrides in place using NATS_URL
NATS Configuration Context "pam"

      Server URLs: nats://nats:4222
      Credentials: /nsc/nkeys/creds/local/APP/pam.creds (OK)
       NSC Lookup: nsc://local/APP/pam
             Path: /nsc/.config/nats/context/pam.json

WARNING: Shell environment overrides in place using NATS_URL
02:10:27 Listening on "services.greet" in group "NATS-RPLY-22"
02:10:27 Sending request on "services.greet"
02:10:27 [#0] Received on subject "services.greet":


02:10:27 Received with rtt 292.828µs
Reply ApjXPewGT1xPFgotrSEWru

02:10:27 Sending request on "services.greet"
02:10:27 [#1] Received on subject "services.greet":


02:10:27 Received with rtt 263.885µs
Reply ApjXPewGT1xPFgotrSEWsr

02:10:27 Sending request on "services.greet"
02:10:27 Subscribing on _INBOX.> 


02:10:27 [#2] Received on subject "services.greet":
[#1] Received on "_INBOX.Cdy26xFGmJFRMEOeVxipEl.IkEcKYaN"
Reply ApjXPewGT1xPFgotrSEWto

Reply ApjXPewGT1xPFgotrSEWto

02:10:27 Received with rtt 266.44µs
02:10:27 Sending request on "services.greet"


02:10:27 [#3] Received on subject "services.greet":
Reply ApjXPewGT1xPFgotrSEWul

02:10:27 Received with rtt 231.065µs
[ OK ] added sub "_INBOX_joe.>"
[ OK ] added deny sub "_INBOX.>"
[ OK ] generated user creds file `/nsc/nkeys/creds/local/APP/joe.creds`
[ OK ] edited user "joe"
[ OK ] added sub "_INBOX_pam.>"
[ OK ] added deny sub "_INBOX.>"
[ OK ] generated user creds file `/nsc/nkeys/creds/local/APP/pam.creds`
[ OK ] edited user "pam"
02:10:28 Subscribing on _INBOX.> 
^C